--- a/src/app/components/quizz/quizz.component.html
+++ b/src/app/components/quizz/quizz.component.html
@@ -1,3 +1,16 @@
 <div class="quizz__container">
-
+  <div class="quizz__logo">
+    <img src="assets/logo.png" alt="">
+    <h3>Titulo</h3>
+  </div>
+  <div class="quizz_questions">
+    <h3>Questão selecionada</h3>
+  </div>
+  <div class="quizz__options">
+    <button class="btn-option">option name</button>
+  </div>
+  <div class="quizz__results">
+    <h1>O seu resultado é</h1>
+    <p>Resposta selecionada</p>
+  </div>
 </div>
