--- a/src/app/components/quizz/quizz.component.html
+++ b/src/app/components/quizz/quizz.component.html
@@ -1,9 +1,9 @@
 <div class="quizz__container">
   <div class="quizz__logo">
-    <img src="assets/logo.png" alt="">
+    <img src="assets/imgs/logo.png" alt="">
     <h3>Titulo</h3>
   </div>
-  <div class="quizz_questions">
+  <div class="quizz__questions">
     <h3>Questão selecionada</h3>
   </div>
   <div class="quizz__options">
