--- a/src/app/components/quizz/quizz.component.html
+++ b/src/app/components/quizz/quizz.component.html
@@ -1,15 +1,15 @@
 <div class="quizz__container">
   <div class="quizz__logo">
     <img src="assets/imgs/logo.png" alt="">
-    <h3>Titulo</h3>
+    <h3>{{title}}</h3>
   </div>
   <div class="quizz__questions">
-    <h3>Questão selecionada</h3>
+    <h3>{{questionSelected.question}}</h3>
   </div>
   <div class="quizz__options">
     <button class="btn-option">option name</button>
   </div>
-  <div class="quizz__results">
+  <div *ngIf="finished" class="quizz__results">
     <h1>O seu resultado é</h1>
     <p>Resposta selecionada</p>
   </div>
