--- a/src/app/components/quizz/quizz.component.html
+++ b/src/app/components/quizz/quizz.component.html
@@ -3,14 +3,17 @@
     <img src="assets/imgs/logo.png" alt="">
     <h3>{{title}}</h3>
   </div>
-  <div class="quizz__questions">
+  <div *ngIf="!finished" class="quizz__questions">
     <h3>{{questionSelected.question}}</h3>
   </div>
-  <div class="quizz__options">
-    <button class="btn-option">option name</button>
+  <div *ngIf="!finished" class="quizz__options">
+    <button
+      *ngFor="let option of questionSelected.options; let i = index"
+      (click)="playerChoice(option.alias)"
+      class="btn-option">{{option.name}}</button>
   </div>
   <div *ngIf="finished" class="quizz__results">
-    <h1>O seu resultado é</h1>
-    <p>Resposta selecionada</p>
+    <h1>O seu resultado é:</h1>
+    <p>{{answerSelected}}</p>
   </div>
 </div>
